// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationBar should render 1`] = `
<div>
  <nav
    class="navbar navbar-root pagination-bar-root"
  >
    <div
      class="container-fluid"
    >
      <div
        class="dropdown dropdown-root pagination-items-per-page"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle button-root btn btn-sm btn-secondary"
          type="button"
        >
          10 Items
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom ml-2"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </button>
      </div>
      <div
        class="pagination-results"
      >
        Showing 21 to 30 of 100 entries.
      </div>
      <ul
        class="pagination pagination-root"
      >
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=2"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-left-small icon-root"
              role="presentation"
            >
              <use
                href="#angle-left-small"
              />
            </svg>
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=1"
          >
            1
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=2"
          >
            2
          </a>
        </li>
        <li
          class="page-item active"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=3"
          >
            3
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=4"
          >
            4
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=5"
          >
            5
          </a>
        </li>
        <li
          class="page-item"
        >
          <div
            class="dropdown dropdown-root"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="See more"
              class="dropdown-toggle page-link btn btn-unstyled"
              type="button"
            >
              ...
            </button>
          </div>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=10"
          >
            10
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=4"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-right-small icon-root"
              role="presentation"
            >
              <use
                href="#angle-right-small"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`PaginationBar should render different deltas 1`] = `
<div>
  <nav
    class="navbar navbar-root pagination-bar-root"
  >
    <div
      class="container-fluid"
    >
      <div
        class="dropdown dropdown-root pagination-items-per-page"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle button-root btn btn-sm btn-secondary"
          type="button"
        >
          1 Item
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom ml-2"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </button>
      </div>
      <div
        class="pagination-results"
      >
        Showing 1 to 1 of 10 entries.
      </div>
      <ul
        class="pagination pagination-root"
      >
        <li
          class="page-item disabled"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            disabled=""
            href="/?page=0"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-left-small icon-root"
              role="presentation"
            >
              <use
                href="#angle-left-small"
              />
            </svg>
          </a>
        </li>
        <li
          class="page-item active"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=1"
          >
            1
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=2"
          >
            2
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=3"
          >
            3
          </a>
        </li>
        <li
          class="page-item"
        >
          <div
            class="dropdown dropdown-root"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="See more"
              class="dropdown-toggle page-link btn btn-unstyled"
              type="button"
            >
              ...
            </button>
          </div>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=10"
          >
            10
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=2"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-right-small icon-root"
              role="presentation"
            >
              <use
                href="#angle-right-small"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
